# Huffman-Coding

./: .gitignore  .huff  CMakeLists.txt  README.md  huff  huff.config  main.cpp  teste.huff
data/: huff  huff.huff  huff.txt  in  in.huff  in.txt  luisa  luisa.huff  tex.huff  tex.txt
include/: bitio.hpp  huff.h  huff.hpp  huffman_tree.hpp  trie.hpp
src/: huff.cpp  huffman_tree.cpp  main.cpp  trie.cpp
